examples/errors/primary_type_error.syntax
Program
  ProgramDeclaration
    ClassName: Main
    ProgramArguments
      Literals
        Literal: 1.100000
        Literal: 1.200000
  ClassDeclarations
    ClassDeclaration
      ClassName: Main
      ClassBody
        MemberDeclarations
          MemberDeclaration
            MethodDeclaration
              Body
                BodyDeclarations
                  BodyDeclaration
                    VariableDeclaration
                      CompoundExpression: Real
                      VariableName: a
                  BodyDeclaration
                    ReturnStatement
                      CompoundExpression: a
              ReturnType
                ClassName: Integer
              MethodName: returnInteger
